Bug #58194
mon forward op leak
0%
Description
there is slow op in non-leader mon; I just found osd_alive op leaked;
{
"ops": [
{
"description": "osd_alive(want up_thru 15123 have 15123)",
"initiated_at": "2022-12-06T18:30:02.474005+0800",
"age": 1573.1989881229999,
"duration": 1573.199005614,
"type_data": {
"events": [
{
"time": "2022-12-06T18:30:02.474005+0800",
"event": "initiated"
},
{
"time": "2022-12-06T18:30:02.474009+0800",
"event": "throttled"
},
{
"time": "2022-12-06T18:30:02.474005+0800",
"event": "header_read"
},
{
"time": "2022-12-06T18:30:02.474021+0800",
"event": "all_read"
},