mon: try to realase forward op which is dropped by leader mon Fixes: https://tracker.ceph.com/issues/58194

Signed-off-by: yanqiang-ux <yanqiang_ux@163.com>